# reflective

./: CMakeLists.txt  Jenkinsfile  LICENSE  README.md
src/: main.cpp
src/include/: reflect.h
